prog/1stPartyLibs/quirrel/quirrel/testData/diagnostics/compilation_errors/syntax_errors/expected_linenum.nut
// EXPECT_ERROR: "expected line number after #pos:"
#pos:abc
let x = 1
